# liu-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  build.jai  first.jai  ideas.md  test.jai  test_libs.jai
.cargo/: config.toml
.circleci/: config.yml
ideas/: README.md  v2.md
libs/: dynamic_dispatch.jai  hasher.jai  hashmap.jai  rust_enum.jai  strings.jai  utils.jai  write.jai
libs/files/: module.jai  posix.jai  windows.jai
repro/: code_as_param.jai  declare_assign.jai  defer_in_macro.jai  if_case_struct.jai  insert_main.jai  macro_assertions.jai  relative_pointers.jai  size_of_in_struct.jai  to_string_warning.jai  type_mismatch.jai
src/: ast.jai  ast.rs  buckets.jai  bytecode.jai  checker.rs  errors.rs  files.jai  gone.jai  graph.rs  hash.jai  hashmap.jai  interp.rs  interpreter.jai  lexer.jai  lib.rs  liu.jai  main.jai  moving_gc.jai  parser.jai  parser.rs  print_format.rs  strings.jai  test.jai  tir.jai  typechecker.jai  types.rs  util.rs  utils.jai  write.jai
src/files/: module.jai  unix.jai  windows.jai
src/interp/: asm.rs  memory.rs  mod.rs  types.rs
test/: functions.liu  ignored.pointers.liu  pointers.liu  simple.gme  simple.liu
tests/: procedures.liu  simple.liu
vim-liu/: .gitignore  LICENSE  README.md
vim-liu/ftdetect/: liu.vim
vim-liu/indent/: liu.vim
vim-liu/syntax/: liu.vim
